testdata/baselines/reference/compiler/tluaAsyncFunctionTypeErrors.errors.txt
tluaAsyncFunctionTypeErrors.tlua(12,7): error TLUA2322: Type 'async (url: string) => boolean' is not assignable to type '(url: string) => boolean'.
  An async function is not assignable to a non-async function type.
tluaAsyncFunctionTypeErrors.tlua(16,5): error TLUA2345: Argument of type 'async (url: string) => boolean' is not assignable to parameter of type '(url: string) => boolean'.
  An async function is not assignable to a non-async function type.


==== tluaAsyncFunctionTypeErrors.tlua (2 errors) ====
    // Strict async assignability: an async function is not assignable to a plain
    // (non-async) function type. This closes the laundering hole — async-ness can
    // no longer be silently erased by annotating a sync function type.
    
    declare function request(url: string): boolean;
    
    async function fetchOk(url: string): boolean
      return request(url);
    end
    
    // Error: async fn laundered through a plain (sync) function-typed slot.
    local bad: (url: string) => boolean = fetchOk;
          ~~~
!!! error TLUA2322: Type 'async (url: string) => boolean' is not assignable to type '(url: string) => boolean'.
!!! error TLUA2322:   An async function is not assignable to a non-async function type.
    
    // Error: async fn passed to a specific sync-typed callback parameter.
    declare function run(cb: (url: string) => boolean): void;
    run(fetchOk);
        ~~~~~~~
!!! error TLUA2345: Argument of type 'async (url: string) => boolean' is not assignable to parameter of type '(url: string) => boolean'.
!!! error TLUA2345:   An async function is not assignable to a non-async function type.
    